--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%;}
+html { font-size: 16px;}
+
+body { margin: 0;}
+
+*{ margin: 0; padding: 0; }
+
+*, *::before, *::after { box-sizing: border-box; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
+
+// h1, h2, h3, h4 { text-wrap: balance; }
+
+p{ text-wrap: pretty }
+
+img, svg {height: auto; max-height: 100%;}
+
+
+
+
+
+
