add content to home

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -5,7 +5,12 @@
 </section>
 
 <!--More movies-->
-<section class="movies">
+<!-- <section class="movies">
   <h2 class="movies__title">Solo para tí</h2>
   <app-select-movie></app-select-movie>
+</section> -->
+<section class="movies">
+  <app-movie-explorer/>
+
+  <app-movie-card/>
 </section>
