--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -1,6 +1,6 @@
 .movies {
   overflow: hidden;
-  background: linear-gradient(#000, red);
+  background: linear-gradient(to bottom, black 30%, #991b1b);
   padding-top: 2rem;
   position: relative;
 
