--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 html, body { height: 100%;}
 html { font-size: 16px;}
 
-body { margin: 0;}
+body { margin: 0; padding: 0}
 
 *{ margin: 0; padding: 0; }
 
