--- a/src/app/features/home/dashboard/dashboard.component.scss
+++ b/src/app/features/home/dashboard/dashboard.component.scss
@@ -64,8 +64,9 @@
   &__info {
     position: absolute;
     bottom: 10px;
-    margin: 100px 80px;
+    margin: 100px 140px;
     display: none;
+    width: 81%;
     
     &-content {
       width:  40%;
