--- a/src/app/features/genreMovies/genre-movies.component.html
+++ b/src/app/features/genreMovies/genre-movies.component.html
@@ -1,6 +1,10 @@
-<div>
-  <h2>Action</h2>
-  <div>
+<div class="movies">
+  <div class="genre">
+    <button class="movies__btn" (click)="backHome()"><ion-icon name="arrow-back-outline"></ion-icon></button>
+    <h2 class="genre__title">{{genre}}</h2>
+  </div>
+  
+  <div class="movies__grid">
     @for (movie of movies$ | async; track $index) {
       <app-movie-card [movie]="movie"></app-movie-card>
     }
