--- a/src/app/features/genreMovies/genre-movies.component.scss
+++ b/src/app/features/genreMovies/genre-movies.component.scss
@@ -35,7 +35,14 @@
     gap: 15px;
 
   };
+
+  .info {
+    position: absolute;
+    left: 20%;
+    top: 70px
+  }
 };
+
 
 @media only screen and (max-width: 767px) {
   .movies {
