--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -2,6 +2,7 @@
   overflow: hidden;
   background: linear-gradient(to bottom, black 30%, #991b1b);
   padding-top: 2rem;
+  border: 1px solid white;
   position: relative;
 
   &__title{
