--- a/src/app/shared/components/select-movie/select-movie.component.html
+++ b/src/app/shared/components/select-movie/select-movie.component.html
@@ -1,7 +1,4 @@
-
-
-
-<!-- <section class="movies">
+<section class="movies">
   <button (click)="slideMoviesPrev()" class="movies__button movies__button--prev">
     <ion-icon name="chevron-back-outline" color="red"></ion-icon>
   </button>
@@ -18,4 +15,4 @@
   <button (click)="slideMoviesNext()" class="movies__button movies__button--next">
     <ion-icon name="chevron-forward-outline" color="red"></ion-icon>
   </button>
-</section> -->
+</section>
