--- a/src/app/features/genreMovies/genre-movies.component.html
+++ b/src/app/features/genreMovies/genre-movies.component.html
@@ -9,4 +9,9 @@
       <app-movie-card [movie]="movie"></app-movie-card>
     }
   </div>
+  <section class="info">
+    <app-movie-detail/>
+  </section>
 </div>
+
+
