--- a/src/app/shared/components/movie-card/movie-card.component.scss
+++ b/src/app/shared/components/movie-card/movie-card.component.scss
@@ -1,6 +1,7 @@
-.main {
-  display: flex;
-}
+// .main {
+  
+  
+// }
 .card {
   width: 158px;
   height: 260px;
@@ -9,9 +10,33 @@
   backdrop-filter: blur(14px);
   border-radius: 5px;
   padding: 8px;
-  margin-left: 12px;
   font-size: 12px;
-  
+  position: relative;
+
+  // &::after {
+  //   content: '';
+  //   position: absolute;
+  //   top: 0;
+  //   bottom: 0;
+  //   width: 100%;
+  //   height: 100%;
+  //   border: 2px solid transparent;
+  //   background: linear-gradient(0deg, white, white) no-repeat;
+  //   background-size: 100% 0%; /* Inicialmente no visible */
+  //   transition: background-size 0.5s ease-in-out;
+  //   z-index: 10;
+  //   pointer-events: none; 
+  // }
+  // &:hover::after {
+  //   // scale: 1.2;
+  //   // border: 1px solid white;
+  //   // transition-duration: 800ms;
+  //   //   margin-left: 20px;
+  //   //   margin-right: 15px;
+  //   background-size: 100% 100%;
+  // }
+
+
   &__content{
     position: relative;
     padding: 0 0;
