--- a/src/app/features/genreMovies/genre-movies.component.html
+++ b/src/app/features/genreMovies/genre-movies.component.html
@@ -6,12 +6,19 @@
   
   <div class="movies__grid">
     @for (movie of movies$ | async; track $index) {
-      <app-movie-card [movie]="movie"></app-movie-card>
+      <button class="movies__info" (click)="onMovieSelected(movie)">
+        <app-movie-card [movie]="movie"></app-movie-card>
+      </button>
+      
     }
   </div>
-  <section class="info">
-    <app-movie-detail/>
-  </section>
+
+  @if(movieSelected){
+    <section class="info">
+      <app-movie-detail [Movie]="movieSelected"/>
+    </section>
+  }
+  
 </div>
 
 
