--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+
+
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%;}
@@ -13,7 +15,11 @@ body { margin: 0; padding: 0}
 
 p{ text-wrap: pretty }
 
-img, svg {height: auto; max-height: 100%;}
+img, svg {height: auto; max-height: 100%;};
+
+
+
+
 
 
 
